--- a/index.html
+++ b/index.html
@@ -24,3 +24,21 @@
 </body>
 </html>
 
+
+
+<html><head></head> 
+ <body> 
+  <div class="my content"> 
+   <h1>My video </h1> 
+   <iframe width="900" height="500" src="https://www.youtube.com/embed/7na_-LfGfpE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
+   <h2>My map </h2> 
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2125.0934497578965!2d36.777151436416986!3d-1.2959343789817785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f109997354b97%3A0xe54a131abd8ebdb2!2sAkiraChix!5e0!3m2!1sen!2ske!4v1594471335171!5m2!1sen!2ske" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div> 
+  <br> 
+     <div class="embed-responsive embed-responsive-16by9">
+         <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d60911.93432602377!2d78.3970634342889!3d17.411984629227522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana%2C%20India!3m2!1d17.385044!2d78.486671!4m5!1s0x3bcb93e2642b2e03%3A0x596eb8d0bdfb2e5!2sFacebook%20India%2C%20Building%20No.%2020%2C%20Raheja%20Mindspace%20IT%20Park%2C%20HITEC%20City%2C%20Madhapur%2C%20Telangana%20500081%2C%20India!3m2!1d17.436660099999997!2d78.3840877!5e0!3m2!1sen!2ske!4v1604653616389!5m2!1sen!2ske" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+</div>
+ 
+</body></html>
+
